# whisk-cookiecutter

./: README.md  cookiecutter.json  project_structure
cookiecutter-chat/: cookiecutter.json
cookiecutter-chat/{{cookiecutter.project_slug}}/app/: main.py
cookiecutter-chat/{{cookiecutter.project_slug}}/tests/: test_chat.py
cookiecutter-memory-chat/: cookiecutter.json
cookiecutter-rag/: cookiecutter.json
cookiecutter-rag/{{cookiecutter.project_slug}}/: .env.example  README.md  config.yml  pyproject.toml  pytest.ini
cookiecutter-rag/{{cookiecutter.project_slug}}/app/: main.py
cookiecutter-rag/{{cookiecutter.project_slug}}/app/dependencies/: llm.py  vector_store.py
cookiecutter-rag/{{cookiecutter.project_slug}}/app/handlers/: __init__.py  query.py  storage.py
cookiecutter-rag/{{cookiecutter.project_slug}}/app/utils/: token_counter.py
cookiecutter-rag/{{cookiecutter.project_slug}}/tests/: conftest.py  test_query.py  test_storage.py
cookiecutter-react-chat/: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  app.py  config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/handlers/: __init__.py  embed.py  query.py  storage.py  vector_store.py  {% if cookiecutter.framework == 'crewai' %}query.py{% endif %}  {% if cookiecutter.framework == 'crewai' %}storage.py{% endif %}  {% if cookiecutter.framework == 'crewai' %}vector_store.py{% endif %}  {% if cookiecutter.framework == 'langchain' %}query.py{% endif %}  {% if cookiecutter.framework == 'langchain' %}storage.py{% endif %}  {% if cookiecutter.framework == 'langchain' %}vector_store.py{% endif %}  {% if cookiecutter.framework == 'llama-index' %}query.py{% endif %}  {% if cookiecutter.framework == 'llama-index' %}storage.py{% endif %}  {% if cookiecutter.framework == 'llama-index' %}vector_store.py{% endif %}
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: logging.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_embed_handler.py  test_query_handler.py  test_storage_handler.py  test_vector_store.py
(+7 files in other folders)
