[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "A Whisk client application"
requires-python = ">=3.11"
dependencies = [
    "kitchenai-whisk",
    "pyyaml",
    "click",
    "pydantic-settings",
    {% if cookiecutter.framework == 'llama-index' %}
    "kitchenai-llama",
    "llama-index",
    "llama-index-vector-stores-chroma",
    "chromadb",
    "tiktoken"
    {% endif %}
    {% if cookiecutter.framework == 'langchain' %}
    "langchain",
    "langchain-openai",
    "chromadb",
    "tiktoken"
    {% endif %}
    {% if cookiecutter.framework == 'crewai' %}
    "crewai",
    "duckduckgo-search",
    "chromadb"
    {% endif %}
    {% if cookiecutter.framework == 'smol-agents' %}
    "smol-ai",
    "chromadb"
    {% endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.app:main" 